[package]
name = "jwt-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt-simple = "0.10.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = "0.2.79"
serde-wasm-bindgen = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
